MDEV-27303 Table corruption after insert into a non-InnoDB table with DESC index

optimized prefix search didn't take into account descending indexes

also fixes MDEV-27330